--- a/src/app/oplaty/oplaty.component.html
+++ b/src/app/oplaty/oplaty.component.html
@@ -15,7 +15,7 @@
     type="button"
     label="książki do opłacenia: {{ booksToReturn }}"
     icon="pi pi-book"
-    class="p-button-warning p-button-outlined"
+    class="p-button-secondary p-button-outlined"
   ></button>
   <button
     pButton
@@ -31,7 +31,7 @@
     type="button"
     label="dłużnicy: {{ loans.length }}"
     icon="pi pi-users"
-    class="p-button-warning p-button-outlined"
+    class="p-button-secondary p-button-outlined"
   ></button>
   <button
     pButton
@@ -39,7 +39,7 @@
     type="button"
     label="zyski biblioteki: {{ cashEarned }}zł"
     icon="pi pi-dollar"
-    class="p-button-warning p-button-outlined"
+    class="p-button-secondary p-button-outlined"
   ></button>
 </span>
 <hr />
