--- a/src/app/osoba/person-form/person-form.component.html
+++ b/src/app/osoba/person-form/person-form.component.html
@@ -6,7 +6,7 @@
     type="button"
     label="Powrót"
     onClick="history.go(-1)"
-    class="p-button-warning"
+    class="p-button-secondary"
   ></button>
 </div>
 
@@ -68,7 +68,7 @@
             ODDANE KSIĄŻKI
             <p-tag
               value="{{ loansHistory.length }}"
-              severity="warning"
+              severity="info"
               [rounded]="true"
             ></p-tag>
           </h3>
@@ -132,7 +132,7 @@
             WYPOŻYCZONE KSIĄŻKI
             <p-tag
               value="{{ activeLoans.length }}"
-              severity="warning"
+              severity="secondary"
               [rounded]="true"
             ></p-tag>
           </h3>
