--- a/src/app/wypozyczenia/wypozyczenia.component.html
+++ b/src/app/wypozyczenia/wypozyczenia.component.html
@@ -5,7 +5,7 @@
     type="button"
     label="dłużnicy: {{ peopleWithLoans }}"
     icon="pi pi-user"
-    class="p-button-warning p-button-outlined"
+    class="p-button-secondary p-button-outlined"
   ></button>
   <button
     pButton
@@ -13,7 +13,7 @@
     type="button"
     label="wypozyczenia: {{ loans.length }}"
     icon="pi pi-book"
-    class="p-button-warning p-button-outlined"
+    class="p-button-secondary p-button-outlined"
   ></button>
 </span>
 <hr />
