--- a/src/app/oplaty/oplaty.component.html
+++ b/src/app/oplaty/oplaty.component.html
@@ -15,7 +15,7 @@
     type="button"
     label="książki do opłacenia: {{ booksToReturn }}"
     icon="pi pi-book"
-    class="p-button-warning p-button-outlined"
+    class="p-button-secondary p-button-outlined"
   ></button>
   <button
     pButton
@@ -31,7 +31,7 @@
     type="button"
     label="dłużnicy: {{ loans.length }}"
     icon="pi pi-users"
-    class="p-button-warning p-button-outlined"
+    class="p-button-secondary p-button-outlined"
   ></button>
   <button
     pButton
@@ -39,7 +39,7 @@
     type="button"
     label="zyski biblioteki: {{ cashEarned }}zł"
     icon="pi pi-dollar"
-    class="p-button-warning p-button-outlined"
+    class="p-button-secondary p-button-outlined"
   ></button>
 </span>
 <hr />
@@ -53,11 +53,15 @@
 >
   <ng-template pTemplate="header">
     <tr>
-      <th class="upprText idBttns">id</th>
+      <th pSortableColumn="personId" class="upprText idBttns">
+        id<p-sortIcon field="personId"></p-sortIcon>
+      </th>
       <th class="upprText dane">imie</th>
       <th class="upprText dane2">nazwisko</th>
       <th class="upprText editBttns">książki</th>
-      <th class="upprText">dług</th>
+      <th pSortableColumn="toPay" class="upprText">
+        dług <p-sortIcon field="toPay"></p-sortIcon>
+      </th>
       <th></th>
       <th></th>
     </tr>
@@ -72,7 +76,7 @@
         <b>{{ loan.personSurname }}</b>
       </td>
       <td class="editBttns">{{ loan.booksAmount }}</td>
-      <td>{{ loan.toPay }}zł</td>
+      <td class="{{ alertPay(loan.toPay) }}">{{ loan.toPay }}zł</td>
       <td></td>
       <td>
         <button
