--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   font-family: Segoe UI;
+  background: rgb(218, 218, 218);
+  background: linear-gradient(
+    90deg,
+    rgba(218, 218, 218, 1) 0%,
+    rgba(255, 255, 255, 1) 50%,
+    rgba(218, 218, 218, 1) 100%
+  );
 }
+
 h1 {
   margin-left: auto;
   margin-right: auto;
