--- a/src/app/ksiazka/book-form/book-form.component.html
+++ b/src/app/ksiazka/book-form/book-form.component.html
@@ -100,13 +100,7 @@
   <p-table>
     <ng-template pTemplate="header">
       <tr>
-        <td class="data1">ID</td>
-        <td>
-          <b>{{ book?.id }}</b>
-        </td>
-      </tr>
-      <tr>
-        <td>TYTUŁ</td>
+        <td class="data1">TYTUŁ</td>
         <td>
           <b>{{ book?.nazwa }}</b>
         </td>
