--- a/src/app/wypozyczenia/wypozyczenia.component.css
+++ b/src/app/wypozyczenia/wypozyczenia.component.css
@@ -10,12 +10,12 @@
   display: flex;
 }
 ul {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI";
   margin-left: 25px;
   padding: 2px;
 }
 div {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI";
   font-size: 25px;
 }
 .bar {
