--- a/src/app/ksiazka/book-form/book-form.component.html
+++ b/src/app/ksiazka/book-form/book-form.component.html
@@ -54,6 +54,7 @@
           placeholder="Wyszukaj osobę"
           class="p-button-secondary"
           [(ngModel)]="serach"
+          (click)="searchPeople()"
           ngDefaultControl
         />
       </div>
